--- a/3-linear.tex
+++ b/3-linear.tex
@@ -260,7 +260,7 @@ In this section we will assume the conditions and notations of Examples~\ref{xmp
 
     Second, suppose that $A$ is in elementary divisor form
     $$
-        A = \op{diag(C[p_1^{e_{11}}],\dots,C[p_r^{e_{rk_r}}])}.
+        A = \op{diag}(C[p_1^{e_{11}}],\dots,C[p_r^{e_{rk_r}}]).
     $$
     Then,
     $$
